--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <h1>
       
     </h1>
-    <script>
-        const h1 = document.querySelector('h1');
-        h1.innerText = 'Title'
-    </script>
+    <script src="index.js"></script>
 </body>
 </html>
