--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>
       
     </h1>
-    <script src="2_Data types.js"></script>
+    <script src="3_Strings.js"></script>
 </body>
 </html>
