--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>
       
     </h1>
-    <script src="5_Comparison.js"></script>
+    <script src="6_Logical op.js"></script>
 </body>
 </html>
