--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>
       
     </h1>
-    <script src="8_Function.js"></script>
+    <script src="9_Checkpoint.js"></script>
 </body>
 </html>
