--- a/Counter App/0_Counter.html
+++ b/Counter App/0_Counter.html
@@ -13,7 +13,15 @@
     <link rel="stylesheet" href="1_styles.css">
 </head>
 <body>
-    
+
     <script src="2_code.js"></script>
+    
+    <div class="counter">
+        <p class="counter_p">1</p>
+        <button class="counter_button">+1 Бассейн</button>
+    </div>
+
+
+
 </body>
 </html>
