--- a/Counter App/0_Counter.html
+++ b/Counter App/0_Counter.html
@@ -13,14 +13,13 @@
     <link rel="stylesheet" href="1_styles.css">
 </head>
 <body>
-
-    <script src="2_code.js"></script>
     
     <div class="counter">
-        <p class="counter_p">1</p>
+        <p class="counter_p">0</p>
         <button class="counter_button">+1 Бассейн</button>
+        <button class="counter_reset">Сбросить</button>
     </div>
-
+    <script src="2_code.js"></script>
 
 
 </body>
