--- a/0_index.html
+++ b/0_index.html
@@ -17,8 +17,9 @@
     <div class="row">
         <div class="enter_msg">
             <h1>Новый пост</h1>
-    1
             <input class='js-user_title user_title' 
+            type="text">
+            <input class='js-user_text user_text' 
             type="text">
     
             <button class="js-post_btn post_btn">
