--- a/3_Expenses app/0_index.html
+++ b/3_Expenses app/0_index.html
@@ -23,7 +23,7 @@
 
             <p
             class="p_bold">
-                Лимит: <span id="limit" class="p_bold">0</span>
+                Лимит: <span id="limit" class="p_bold"></span>
             </p>
             
             <p
@@ -33,7 +33,7 @@
 
             <p
             class="p_bold">
-                Статус: <span id="status" class="p_bold">Все хорошо</span>
+                Статус: <span id="status"></span>
             </p>
         </div>
 
