--- a/3_Expenses app/0_index.html
+++ b/3_Expenses app/0_index.html
@@ -36,6 +36,11 @@
             class="p_bold">
                 Статус: <span id="status" class="p_light"></span>
             </p>
+            <button 
+            id="reset_btn"
+            class="reset_btn">
+                Сбросить расходы
+            </button>
         </div>
 
         <div class="rightSide">
