--- a/4_Movie app/0_index.html
+++ b/4_Movie app/0_index.html
@@ -15,12 +15,27 @@
     <div class="wrapper">
         <div class="tag_str">
             <p class="tag">Список фильмов</p>
-            <p class="tag">2023</p>
+            <p class="tag">2025</p>
         </div>
         <h2>Посмотреть</h2>
         <div class="listOfFilms">
-            
+            <div class="inputArea">
+                <input 
+                id="input"
+                class="input_css"
+                placeholder="Добавить фильм"
+                type="text">
+                <button 
+                id="inputBtn"
+                class="inputBtn_css"></button>
+            </div>
+            <div
+            id="list" 
+            class="user_list">
+                История пуста
+            </div>
         </div>
     </div>
+    <script src="3_code.js"></script>
 </body>
 </html>
